--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,10 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
