--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,11 @@
       <artifactId>jackson-datatype-jsr310</artifactId>
       <version>2.9.3</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
   </dependencies>
 
 </project>
