--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-pl.coderstrust.database = memory
+pl.coderstrust.database = hibernate
+
+#Database H2
+spring.h2.console.enabled = true
+spring.datasource.url = jdbc:h2:mem:testdb
+spring.datasource.username = sa
+spring.datasource.password =
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = validate
+spring.datasource.driverClassName = org.h2.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
