Log invoice service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-pl.coderstrust.database = hibernate
+pl.coderstrust.database = memory
 
 #Database H2
 spring.h2.console.enabled = true
@@ -9,3 +9,5 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+logging.file=application.log
