service class done - reformat code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-pl.coderstrust.database = memory
+pl.coderstrust.database = hibernate
 
 #Database H2
 spring.h2.console.enabled = true
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
-logging.file=application.log
+logging.file = application.log
