--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,10 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+      <version>2.1.1.RELEASE</version>
+    </dependency>
   </dependencies>
-
 </project>
