--- a/pom.xml
+++ b/pom.xml
@@ -200,5 +200,10 @@
       <artifactId>spring-boot-starter-security</artifactId>
       <version>2.1.1.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>
   </dependencies>
 </project>
