--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,12 @@
       <artifactId>spring-boot-starter-web-services</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.ws</groupId>
+      <artifactId>spring-ws-test</artifactId>
+      <version>3.0.5.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>wsdl4j</groupId>
       <artifactId>wsdl4j</artifactId>
     </dependency>
