--- a/pom.xml
+++ b/pom.xml
@@ -253,5 +253,10 @@
       <artifactId>bcprov-jdk15on</artifactId>
       <version>1.60</version>
     </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>jaxrs-api</artifactId>
+      <version>3.0.10.Final</version>
+    </dependency>
   </dependencies>
 </project>
