--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+#Security
+spring.security.username = user
+spring.security.userpassword = {noop}user
+spring.security.adminname = admin
+spring.security.adminpassword = {noop}admin
