--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.security.username = user
 spring.security.userpassword = {noop}user
 spring.security.adminname = admin
 spring.security.adminpassword = {noop}admin
+
+#PDF
+pdf.filename = faktura.pdf
