--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
+logging.file = application.log
+
 #Security
 spring.security.username = user
 spring.security.userpassword = {noop}user
