--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,6 @@ spring.jpa.hibernate.ddl-auto = create
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
-logging.file = application.log
-
 #Security
 spring.security.username = user
 spring.security.userpassword = {noop}user
@@ -19,7 +17,6 @@ spring.security.adminname = admin
 spring.security.adminpassword = {noop}admin
 
 #PDF
-pdf.filename = faktura.pdf
-
+pdf.filename = invoice.pdf
 #SL4J
 logging.file = application.log
